After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738674 - rtmpsink: leaking URI string
rtmpsink: leaking URI string
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal critical
: 1.4.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-17 09:38 UTC by Håvard Graff (hgr)
Modified: 2014-10-25 12:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (630 bytes, patch)
2014-10-17 09:38 UTC, Håvard Graff (hgr)
needs-work Details | Review
patch (634 bytes, patch)
2014-10-19 18:36 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2014-10-17 09:38:18 UTC
Created attachment 288733 [details] [review]
patch

Test to reproduce:

GST_START_TEST(confdemo_rtmp)
{
  GstHarness * h = gst_harness_new_parse (
      "rtmpsink location=\"rtmp://localhost/pexip/live live=1\"");
  gst_harness_teardown (h);
}
GST_END_TEST;
Comment 1 Nicolas Dufresne (ndufresne) 2014-10-19 08:17:34 UTC
Review of attachment 288733 [details] [review]:

Looks good, thanks for report.
Comment 2 Sebastian Dröge (slomo) 2014-10-19 11:50:26 UTC
Comment on attachment 288733 [details] [review]
patch

Nope it's not as mentioned during collective reviewing during your talk ;)

You need to free/NULL the URI in finalize() as it's from a property... otherwise the element would forget its URI when you set it back to NULL state. That's unexpected and invalid behaviour.
Comment 3 Håvard Graff (hgr) 2014-10-19 18:36:34 UTC
Created attachment 288860 [details] [review]
patch

I agree, new patch attached :)
Comment 4 Sebastian Dröge (slomo) 2014-10-20 07:37:19 UTC
commit a1e948cddd718f35264f8906046d7286bdc38703
Author: Havard Graff <havard.graff@gmail.com>
Date:   Sun Oct 19 20:35:41 2014 +0200

    rtmpsink: Free URI string in finalize()
    
    https://bugzilla.gnome.org/show_bug.cgi?id=738674