rtmpsink: Free URI string in finalize()

https://bugzilla.gnome.org/show_bug.cgi?id=738674